@@ -1,13 +1,13 @@
 [comment {-*- tcl -*- doctools manpage}]
 [comment {$Id: struct_list.man,v 1.24 2010/10/05 21:47:25 andreas_kupries Exp $}]
-[manpage_begin struct::list n 1.7]
+[manpage_begin struct::list n 1.8.2]
 [copyright {2003-2005 by Kevin B. Kenny. All rights reserved}]
-[copyright {2003-2010 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
+[copyright {2003-2012 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc {Tcl Data Structures}]
 [titledesc {Procedures for manipulating lists}]
 [category  {Data structures}]
 [require Tcl 8.4]
-[require struct::list [opt 1.8]]
+[require struct::list [opt 1.8.2]]
 [description]
 
 [para]
