@@ -1,3 +1,10 @@
+2012-12-07  Andreas Kupries  <andreask@activestate.com>
+
+	* list.tcl: [Bug 3593689]. Applied patch by Donal Fellows fixing
+	* list.test: a busyloop in [nextperm] due to use of the wrong
+	* pkgIndex.tcl: comparison operator. Bumped version to 1.8.2.
+	* struct_list.man: Added test for this.
+
 2012-11-21  Andreas Kupries  <andreask@activestate.com>
 
 	* pkgIndex.tcl: Fixed package require mismatch for use of TclOO.
